--- a/style.css
+++ b/style.css
@@ -70,6 +70,9 @@ div.about{
 div.about p{
    font-size: 17px;
 } 
+button.Learn:hover{
+    background-color: #242948;
+}
 button.Learn{
     padding: 8px 11px;
     border-radius: 16px;
@@ -81,6 +84,7 @@ button.Learn{
 
 footer{
     background-color: #242948;
+    padding-top: 120px;
 }
 footer a{
     text-decoration: none;
@@ -113,4 +117,24 @@ h2.semi-heading-about{
 p.semi-paragraph-about{
     font-size: 21px;
     margin-right: 120px;
+}
+div.bg{
+    background-image: url(https://www.bykea.com/wp-content/uploads/2020/02/about-opportunity.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 280px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: #fff;
+    border-radius: 20px;
+    margin-bottom: -120px;
+    transform: translateY(-1px);
+}
+div.cards-media{
+    border-radius: 12px;
+    box-shadow: 0 0 5px gray;
 }
